Tidy up code and remove `crossbeam` dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [[example]]
 name = "find"
 
+[[example]]
+name = "blocking"
+
 [dependencies]
-crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
 crossterm = "0.28"
 nucleo = "0.5"
 
