--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,12 @@ nucleo = "0.5"
 [dev-dependencies]
 walkdir = "2.5"
 
+[lints.clippy]
+redundant_closure_for_method_calls = "warn"
+same_functions_in_if_condition = "warn"
+semicolon_if_nothing_returned = "warn"
+uninlined_format_args = "warn"
+
 [[example]]
 name = "find"
 
