--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/autobib/nucleo-picker"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-crossterm = "0.28"
+crossterm = { version = "0.28", features = ["use-dev-tty"] }
 nucleo = "0.5"
 unicode-segmentation = "1.10"
 unicode-width = "0.2"
