--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,7 +32,7 @@ jobs:
         components: clippy, rustfmt
     - uses: Swatinem/rust-cache@v2
     - name: Build docs
-      run: cargo doc --no-deps
+      run: cargo doc --no-deps --all-features
     - name: Run Clippy lints
       run: cargo clippy
     - name: Check formatting
