--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,22 @@ description = "A fuzzy picker tui library based on nucleo"
 repository = "https://github.com/autobib/nucleo-picker"
 license = "MIT OR Apache-2.0"
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [dependencies]
 crossterm = { version = "0.28", features = ["use-dev-tty"] }
+memchr = "2.7"
 nucleo = "0.5"
 unicode-segmentation = "1.10"
 unicode-width = "0.2"
-memchr = "2.7"
+serde = { version = "1.0", optional = true }
 
 [dev-dependencies]
 ignore = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [lints.clippy]
 redundant_closure_for_method_calls = "warn"
@@ -30,7 +37,8 @@ name = "find"
 name = "blocking"
 
 [[example]]
-name = "multiline"
+name = "serde"
+required-features = ["serde"]
 
 [[example]]
 name = "fzf"
