--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "nucleo-picker"
-version = "0.6.0"
-edition = "2021"
 authors = ["Alex Rutar <alex@rutar.org>"]
+categories = ["command-line-interface"]
 description = "A fuzzy picker tui library based on nucleo"
-repository = "https://github.com/autobib/nucleo-picker"
+edition = "2021"
+keywords = ["cli"]
 license = "MIT OR Apache-2.0"
+name = "nucleo-picker"
+repository = "https://github.com/autobib/nucleo-picker"
+version = "0.6.0"
 
 [package.metadata.docs.rs]
 all-features = true
