--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ crossterm = { version = "0.28", features = ["use-dev-tty"] }
 memchr = "2.7"
 nucleo = "0.5"
 unicode-segmentation = "1.10"
-unicode-width = { version = "0.2", default-features = "false" }
+unicode-width = { version = "0.2", default-features = false }
 serde = { version = "1.0", optional = true }
 
 [dev-dependencies]
