--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ keywords = ["cli"]
 license = "MIT OR Apache-2.0"
 name = "nucleo-picker"
 repository = "https://github.com/autobib/nucleo-picker"
-version = "0.6.4"
+version = "0.7.0-alpha"
 
 [package.metadata.docs.rs]
 all-features = true
