--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0", optional = true }
 
 [dev-dependencies]
 crossbeam = "0.8.4"
+rand = "0.8.5"
 ignore = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -41,6 +42,9 @@ name = "fzf_err_handling"
 
 [[example]]
 name = "find"
+
+[[example]]
+name = "restart"
 
 [[example]]
 name = "blocking"
