--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 crossterm = { version = "0.28", features = ["use-dev-tty"] }
 memchr = "2.7"
 nucleo = "0.5"
+parking_lot = "0.12.3"
 unicode-segmentation = "1.10"
 unicode-width = { version = "0.2", default-features = false }
 serde = { version = "1.0", optional = true }
