--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ unicode-width = { version = "0.2", default-features = false }
 serde = { version = "1.0", optional = true }
 
 [dev-dependencies]
+argh = "0.1"
 crossbeam = "0.8.4"
 rand = "0.8.5"
 ignore = "0.4"
